--- a/index.html
+++ b/index.html
@@ -147,13 +147,22 @@
     margin-bottom: 0.3rem;
   }
 
-  .output-container .amount {
-    font-size: 4rem;
-    font-weight: 700;
-    color: #222;
+  /* Making the dollar sign and dollars big, cents smaller, and top-aligned */
+  .amount {
     line-height: 1.2;
     margin: 0;
-    transition: all 0.3s ease;
+    display: inline-block;
+  }
+  .amount .dollars {
+    font-size: 4rem;
+    font-weight: 700;
+    vertical-align: top;
+  }
+  .amount .cents {
+    font-size: 2rem;
+    font-weight: 500;
+    vertical-align: top;
+    margin-left: 0.1em;
   }
 
   .last-run {
@@ -235,8 +244,11 @@
       padding: 0.5rem 1rem;
     }
 
-    .output-container .amount {
+    .amount .dollars {
       font-size: 3rem;
+    }
+    .amount .cents {
+      font-size: 1.5rem;
     }
 
     details summary {
@@ -244,22 +256,16 @@
     }
   }
 
-  /* Permanent subtle glow for $100 increments */
-  .subtle-glow {
-    box-shadow: 0 0 10px rgba(28,60,90,0.3);
-  }
-
-  /* Flashy animation for $1000 increments */
   @keyframes thousand-flash {
-    0%   { text-shadow: none; transform: scale(1); }
-    20%  { text-shadow: 0 0 20px rgba(0,200,0,0.8), 0 0 40px rgba(0,200,0,0.6); transform: scale(1.2); color:#1C5A3C; }
-    50%  { text-shadow: 0 0 20px rgba(0,200,0,1), 0 0 40px rgba(0,200,0,0.8); transform: scale(1.3); color:#1C5A3C;}
-    80%  { text-shadow: 0 0 20px rgba(0,200,0,0.8), 0 0 40px rgba(0,200,0,0.6); transform: scale(1.2); color:#1C5A3C; }
-    100% { text-shadow: none; transform: scale(1); }
+    0%   { transform: scale(1); opacity: 1; }
+    20%  { transform: scale(1.2); opacity: 0.8;}
+    50%  { transform: scale(1.3); opacity: 1;}
+    80%  { transform: scale(1.2); opacity: 0.8;}
+    100% { transform: scale(1); opacity: 1; }
   }
 
   .thousand-milestone {
-    animation: thousand-flash 1.5s ease;
+    animation: thousand-flash 1s ease;
   }
 </style>
 </head>
@@ -301,7 +307,7 @@
 
   <div class="output-container">
     <div class="label">Earned:</div>
-    <div class="amount" id="earnedAmount">$0.00</div>
+    <div class="amount" id="earnedAmount"><span class="dollars">$0</span><span class="cents">.00</span></div>
     <div class="last-run" id="lastRunDisplay" style="display:none;">Last: $0.00</div>
   </div>
 
@@ -322,7 +328,8 @@
 </div>
 
 <script>
-// Pay scales for Captain and First Officer according to the given data
+// Same JavaScript logic as before, with updated element references due to moved $ sign
+
 const captainPayScale = {
   1: 163,
   2: 170,
@@ -368,6 +375,22 @@ const manualStartTimeInput = document.getElementById('manualStartTime');
 const manualStopTimeInput = document.getElementById('manualStopTime');
 const applyAdvancedBtn = document.getElementById('applyAdvancedBtn');
 
+const hundredGlowColors = [
+  '0 0 8px rgba(0,255,0,0.7)',
+  '0 0 8px rgba(0,128,255,0.7)',
+  '0 0 8px rgba(255,128,0,0.7)',
+  '0 0 8px rgba(255,0,200,0.7)',
+  '0 0 8px rgba(128,0,255,0.7)'
+];
+
+const thousandFontColors = [
+  '#1C5A3C',
+  '#2E8B57',
+  '#228B22',
+  '#006400',
+  '#008B8B'
+];
+
 let interval = null;
 let startTime = 0;
 let elapsedSeconds = 0;
@@ -376,7 +399,8 @@ let lastEarnings = 0;
 let lastHundredThreshold = 0;
 let lastThousandThreshold = 0;
 let timerRunning = false;
-let hasSubtleGlow = false; // tracks if we've applied the subtle glow at some $100 increment
+let hundredColorIndex = 0;
+let thousandColorIndex = 0;
 
 function populateYearDropdown(pos) {
   yearSelect.innerHTML = '<option value="">Select Year</option>';
@@ -395,12 +419,7 @@ function getHourlyWage() {
   const yr = yearSelect.value;
   if (!pos || !yr) return 0;
 
-  let basePay = 0;
-  if (pos === 'captain') {
-    basePay = captainPayScale[yr] || 0;
-  } else if (pos === 'fo') {
-    basePay = foPayScale[yr] || 0;
-  }
+  let basePay = (pos === 'captain') ? captainPayScale[yr] || 0 : foPayScale[yr] || 0;
 
   let multiplier = 1.0;
   if (vfnCheckbox.checked) {
@@ -412,37 +431,41 @@ function getHourlyWage() {
   return basePay * multiplier;
 }
 
+function formatEarnings(earnings) {
+  const amt = earnings.toFixed(2);
+  const [whole, dec] = amt.split('.');
+  return { whole, dec };
+}
+
 function updateEarnings() {
   hourlyWage = getHourlyWage();
   const earnings = (hourlyWage / 3600) * elapsedSeconds;
-  earnedAmount.textContent = '$' + earnings.toFixed(2);
+
+  const { whole, dec } = formatEarnings(earnings);
+  earnedAmount.innerHTML = `<span class="dollars">$${whole}</span><span class="cents">.${dec}</span>`;
 
   const hundredMark = Math.floor(earnings / 100);
   const thousandMark = Math.floor(earnings / 1000);
 
-  // If we crossed a new hundred milestone
   if (hundredMark > lastHundredThreshold) {
     lastHundredThreshold = hundredMark;
-    // If we haven't already applied subtle glow, do it now
-    if (!hasSubtleGlow) {
-      earnedAmount.classList.add('subtle-glow');
-      hasSubtleGlow = true;
-    }
+    const color = hundredGlowColors[hundredColorIndex % hundredGlowColors.length];
+    hundredColorIndex++;
+    // Apply the new glow by appending to textShadow style
+    const currentShadow = earnedAmount.style.textShadow;
+    earnedAmount.style.textShadow = currentShadow ? currentShadow + ',' + color : color;
   }
 
-  // If we crossed a new thousand milestone
   if (thousandMark > lastThousandThreshold) {
     lastThousandThreshold = thousandMark;
-    // Apply flashy animation
+    const newColor = thousandFontColors[thousandColorIndex % thousandFontColors.length];
+    thousandColorIndex++;
+    earnedAmount.style.color = newColor;
+
     earnedAmount.classList.add('thousand-milestone');
-    // After animation ends, remove the class
     setTimeout(() => {
       earnedAmount.classList.remove('thousand-milestone');
-      // If we have subtle glow, keep it
-      if (hasSubtleGlow) {
-        earnedAmount.classList.add('subtle-glow');
-      }
-    }, 1500);
+    }, 1000);
   }
 }
 
@@ -455,7 +478,6 @@ positionSelect.addEventListener('change', () => {
   }
 });
 
-// Ensure that checking one checkbox unchecks the other
 vfnCheckbox.addEventListener('change', () => {
   if (vfnCheckbox.checked) {
     premiumCheckbox.checked = false;
@@ -533,17 +555,17 @@ resetBtn.addEventListener('click', () => {
   stopBtn.disabled = true;
   resetBtn.disabled = true;
 
-  // Keep position, year, and modifiers
   positionSelect.disabled = false;
   yearSelect.disabled = false;
   vfnCheckbox.disabled = false;
   premiumCheckbox.disabled = false;
 
-  // Reset milestone tracking and glow
   lastHundredThreshold = 0;
   lastThousandThreshold = 0;
-  hasSubtleGlow = false;
-  earnedAmount.classList.remove('subtle-glow');
+  hundredColorIndex = 0;
+  thousandColorIndex = 0;
+  earnedAmount.style.textShadow = 'none';
+  earnedAmount.style.color = '#222';
 });
 
 function combineTodayWithTime(timestr) {
